test/arrays/compilerErrors/array-of-generic-record.chpl
record GenericRecord { var x; }
var A:[1..10] GenericRecord;
