test/arrays/compilerErrors/array-of-generic-record.good
array-of-generic-record.chpl:2: warning: creating an array with element type GenericRecord
array-of-generic-record.chpl:2: error: array element type cannot currently be generic
